--- a/README.rdoc
+++ b/README.rdoc
@@ -221,30 +221,37 @@ In <code>contrib</code> is a vim syntax file for karel source as described here.
 * Use the command <tt>help command_name</tt> to get a help for +command_name+
 * Use <tt>--</tt> to stop command line argument processing; useful if your arguments have dashes in them
 
-=== Commands
-[<tt>check</tt>] Checks that a Karel program appears valid
+== Commands
+[<tt>check</tt>] Performs a basic syntax check
 [<tt>help</tt>] Shows list of commands or help for one command
-[<tt>init</tt>] Creates a new Karel program with appropriate boilerplate
+[<tt>init</tt>] Creates a new example Karel program
 [<tt>run</tt>] Executes a Karel program
 
-==== <tt>check source_file</tt>
+=== <tt>check source_file</tt>
 
-Checks that a Karel program appears valid
+Performs a basic syntax check
 
-==== <tt>help [command]</tt>
+=== <tt>help [command]</tt>
 
 Shows list of commands or help for one command
 
-==== <tt>init source_file</tt>
+=== <tt>init source_file</tt>
 
-Creates a new Karel program with appropriate boilerplate
+Creates a new example Karel program
 
-==== <tt>run source_file</tt>
+
+
+==== Options
+These options are specified *after* the command.
+
+[<tt>-f, --force</tt>] Overwite files
+=== <tt>run source_file</tt>
 
 Executes a Karel program
 
 
-===== Options
+
+==== Options
 These options are specified *after* the command.
 
 [<tt>-g, --debug</tt>] Show the world after each command is executed
